Wed Feb 11 14:46:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* insns.def (setspecial, putstring): fixed typos in rdoc.

	* insns.def (toregexp): uses rb_ary_tmp_new(), and clears it after
	  used.

Wed Feb 11 14:08:23 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_socket_rights): return 1 on
	  success.  0 on failure.
	  (anc_inspect_passcred_credentials): ditto.
	  (anc_inspect_socket_creds): ditto.
	  (anc_inspect_socket_creds): ditto.
	  (anc_inspect_socket_creds): ditto.
	  (anc_inspect_ip_recvdstaddr): ditto.
	  (anc_inspect_ip_pktinfo): ditto.
	  (anc_inspect_ipv6_pktinfo): ditto.
	  (ancillary_inspect): check family.

Wed Feb 11 12:55:07 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_ip_pktinfo): make result bit
	  succinct.
	  (Init_ancdata): fix number of arguments.

Wed Feb 11 11:47:41 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (Init_ipsocket): undef getpeereid at IPSocket.

Wed Feb 11 10:16:34 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check getpeereid.

	* ext/socket/basicsocket.c (bsock_getpeereid): new method.

Wed Feb 11 09:58:59 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket::UDPSource#inspect): fix variable
	  name.

Wed Feb 11 00:38:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (sock_gethostname): use HOST_NAME_MAX.

	* ext/socket/raddrinfo.c (make_ipaddr): local variable renamed.

Tue Feb 10 23:44:53 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (struct recvfrom_arg): use struct
	  sockaddr_storage.
	  (recvfrom_blocking): follow struct recvfrom_arg change.
	  (s_recvfrom): ditto.
	  (s_recvfrom_nonblock): use struct sockaddr_storage.

	* ext/socket/socket.c (sock_accept): use struct sockaddr_storage.
	  (sock_accept_nonblock): ditto.
	  (sock_sysaccept): ditto.

	* ext/socket/ancdata.c (bsock_recvmsg_internal): use struct
	  sockaddr_storage.

Tue Feb 10 23:30:32 2009  Tanaka Akira  <akr@fsij.org>
