@@ -1,3 +1,8 @@
+Wed Feb 11 15:47:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* array.c (ary_make_shared): returns shared root array itself, and
+	  frozen array can be shared.
+
 Wed Feb 11 14:46:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* insns.def (setspecial, putstring): fixed typos in rdoc.
